{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 56,
  "lineage": "6acd5aa3-1a02-a5d3-910d-9847cb757dca",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:security-group/sg-0d25a5ae650e096af",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d25a5ae650e096af",
            "ingress": [],
            "name": "kubeguardian-cluster-2026031222165264300000000c",
            "name_prefix": "kubeguardian-cluster-",
            "owner_id": "120430500058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeguardian-cluster",
              "Project": "kubeguardian"
            },
            "tags_all": {
              "Name": "kubeguardian-cluster",
              "Project": "kubeguardian"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:security-group/sg-016e5019a8c15e2d0",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-016e5019a8c15e2d0",
            "ingress": [],
            "name": "kubeguardian-node-2026031222165275380000000d",
            "name_prefix": "kubeguardian-node-",
            "owner_id": "120430500058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeguardian-node",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "owned"
            },
            "tags_all": {
              "Name": "kubeguardian-node",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1878107349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d25a5ae650e096af",
            "security_group_rule_id": "sgr-0c8a4fa01ba695ffa",
            "self": false,
            "source_security_group_id": "sg-016e5019a8c15e2d0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3134267240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-0e2b0f6e9e7ba9238",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3243596051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-0ea47d7781ec662de",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-389295783",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-07949ab59440befc3",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3732293937",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-093320ea379292202",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3442111760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-0134466b7888c26b4",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2844477147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-02892196dce6887cc",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3801784427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-0e8e19b8a93aaf2f5",
            "self": false,
            "source_security_group_id": "sg-0d25a5ae650e096af",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-447819519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-090a4ec3b04292baf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4158722321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-0e05a49b38537bff8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1405006590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-016e5019a8c15e2d0",
            "security_group_rule_id": "sgr-02185518809c1a3d1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:network-acl/acl-0f73d681d501bc2fe",
            "default_network_acl_id": "acl-0f73d681d501bc2fe",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f73d681d501bc2fe",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "120430500058",
            "subnet_ids": [
              "subnet-0458780dfecca045c",
              "subnet-058a7605649a4556a",
              "subnet-06ec1cc1fec9fa389"
            ],
            "tags": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:route-table/rtb-0855b30a65843fe8b",
            "default_route_table_id": "rtb-0855b30a65843fe8b",
            "id": "rtb-0855b30a65843fe8b",
            "owner_id": "120430500058",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:security-group/sg-0d52596787bdff53f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d52596787bdff53f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "120430500058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-default",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a11a2e0570f33956",
            "arn": "arn:aws:ec2:us-east-1:120430500058:elastic-ip/eipalloc-0a11a2e0570f33956",
            "domain": "vpc",
            "id": "eipalloc-0a11a2e0570f33956",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-227-199-251.compute-1.amazonaws.com",
            "public_ip": "3.227.199.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kubeguardian-vpc-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:internet-gateway/igw-0898bc1d5f56887b5",
            "id": "igw-0898bc1d5f56887b5",
            "owner_id": "120430500058",
            "tags": {
              "Name": "kubeguardian-vpc",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a11a2e0570f33956",
            "association_id": "eipassoc-070672721f302bdda",
            "connectivity_type": "public",
            "id": "nat-00415d76a611eb71b",
            "network_interface_id": "eni-0ad1ae9bb42697178",
            "private_ip": "10.0.101.227",
            "public_ip": "3.227.199.251",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ec1cc1fec9fa389",
            "tags": {
              "Name": "kubeguardian-vpc-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004f166abb91f89311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00415d76a611eb71b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-004f166abb91f8931",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0898bc1d5f56887b5",
            "id": "r-rtb-0351439e4eecb30d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0351439e4eecb30d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:route-table/rtb-004f166abb91f8931",
            "id": "rtb-004f166abb91f8931",
            "owner_id": "120430500058",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kubeguardian-vpc-private",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-private",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:route-table/rtb-0351439e4eecb30d5",
            "id": "rtb-0351439e4eecb30d5",
            "owner_id": "120430500058",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "kubeguardian-vpc-public",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-public",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03966de9ea6c3b7d5",
            "route_table_id": "rtb-004f166abb91f8931",
            "subnet_id": "subnet-0999605e90ef7258b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640dc20a059817c7",
            "route_table_id": "rtb-004f166abb91f8931",
            "subnet_id": "subnet-0458780dfecca045c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f260675bc5f00d",
            "route_table_id": "rtb-0351439e4eecb30d5",
            "subnet_id": "subnet-06ec1cc1fec9fa389"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc0783da121e84a",
            "route_table_id": "rtb-0351439e4eecb30d5",
            "subnet_id": "subnet-058a7605649a4556a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:subnet/subnet-0999605e90ef7258b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999605e90ef7258b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120430500058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeguardian-vpc-private-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-private-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:subnet/subnet-0458780dfecca045c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0458780dfecca045c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120430500058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeguardian-vpc-private-us-east-1b",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-private-us-east-1b",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:subnet/subnet-06ec1cc1fec9fa389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ec1cc1fec9fa389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120430500058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeguardian-vpc-public-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-public-us-east-1a",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:subnet/subnet-058a7605649a4556a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a7605649a4556a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120430500058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubeguardian-vpc-public-us-east-1b",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc-public-us-east-1b",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "vpc_id": "vpc-0c6c6730c2a482816"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120430500058:vpc/vpc-0c6c6730c2a482816",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f73d681d501bc2fe",
            "default_route_table_id": "rtb-0855b30a65843fe8b",
            "default_security_group_id": "sg-0d52596787bdff53f",
            "dhcp_options_id": "dopt-056718a84b61a6499",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6c6730c2a482816",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0855b30a65843fe8b",
            "owner_id": "120430500058",
            "tags": {
              "Name": "kubeguardian-vpc",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            },
            "tags_all": {
              "Name": "kubeguardian-vpc",
              "Project": "kubeguardian",
              "kubernetes.io/cluster/kubeguardian": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}